// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vpc matches cfn output 1`] = `
Object {
  "Outputs": Object {
    "vpcresourcesapiEndpoint9316DD3B": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "vpcresourcesapi3B63971B",
            },
            ".execute-api.us-west-2.",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "vpcresourcesapiDeploymentStageapi5040988E",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363ArtifactHashC8CABE1D": Object {
      "Description": "Artifact hash for asset \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3Bucket6995F9C9": Object {
      "Description": "S3 bucket for asset \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823": Object {
      "Description": "S3 key for asset version \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "gatewayLink66988216": Object {
      "Properties": Object {
        "Name": "apiGatewayECSLink",
        "TargetArns": Array [
          Object {
            "Ref": "vpcresourcesnlbExternalNlb312FC480",
          },
        ],
      },
      "Type": "AWS::ApiGateway::VpcLink",
    },
    "vpcresourcesapi3B63971B": Object {
      "Properties": Object {
        "EndpointConfiguration": Object {
          "Types": Array [
            "EDGE",
          ],
        },
        "Name": "api",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "vpcresourcesapiAccount2D1A1C2B": Object {
      "DependsOn": Array [
        "vpcresourcesapi3B63971B",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesapiCloudWatchRole342BDB7D",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "vpcresourcesapiCloudWatchRole342BDB7D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "vpcresourcesapiDeploymentC09F976E70a576a58535e0ebbe3edec3d711e72c": Object {
      "DependsOn": Array [
        "vpcresourcesapiproxyANYC42B832A",
        "vpcresourcesapiproxy9B340F6B",
        "vpcresourcesapidbschemastatusGETD86B4E85",
        "vpcresourcesapidbschemastatus2EE2D6E2",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "vpcresourcesapiDeploymentStageapi5040988E": Object {
      "Properties": Object {
        "AccessLogSetting": Object {
          "DestinationArn": Object {
            "Fn::GetAtt": Array [
              "vpcresourcesapiapilogs4B15914F",
              "Arn",
            ],
          },
          "Format": "$context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] \\"$context.httpMethod $context.resourcePath $context.protocol\\" $context.status $context.responseLength $context.requestId",
        },
        "DeploymentId": Object {
          "Ref": "vpcresourcesapiDeploymentC09F976E70a576a58535e0ebbe3edec3d711e72c",
        },
        "MethodSettings": Array [
          Object {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "INFO",
            "MetricsEnabled": true,
            "ResourcePath": "/*",
          },
        ],
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
        "StageName": "api",
        "TracingEnabled": true,
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "vpcresourcesapiapikey5BFB2DBE": Object {
      "Properties": Object {
        "Enabled": true,
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "AWS::StackName",
              },
              "-apiKey",
            ],
          ],
        },
        "StageKeys": Array [
          Object {
            "RestApiId": Object {
              "Ref": "vpcresourcesapi3B63971B",
            },
            "StageName": Object {
              "Ref": "vpcresourcesapiDeploymentStageapi5040988E",
            },
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "vpcresourcesapiapilogs4B15914F": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "AWS::StackName",
              },
              "-api",
            ],
          ],
        },
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesapidbmigratehandlerD11560DD": Object {
      "DependsOn": Array [
        "vpcresourceslambdaecsexecutionroleDefaultPolicy6BD66225",
        "vpcresourceslambdaecsexecutionroleB58119A5",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3Bucket6995F9C9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Trigger DB Migration",
        "Environment": Object {
          "Variables": Object {
            "MD_LB_ADDRESS": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "http://",
                  Object {
                    "Fn::GetAtt": Array [
                      "vpcresourcesnlbExternalNlb312FC480",
                      "DNSName",
                    ],
                  },
                  ":8082",
                ],
              ],
            },
          },
        },
        "FunctionName": "migrate-db",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "vpcresourceslambdaecsexecutionroleB58119A5",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "vpcresourcesvpc14EAEEFF",
                "DefaultSecurityGroup",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "vpcresourcesvpcPublicSubnet1Subnet1777CDC4",
            },
            Object {
              "Ref": "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "vpcresourcesapidbschemastatus2EE2D6E2": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesapi3B63971B",
            "RootResourceId",
          ],
        },
        "PathPart": "db_schema_status",
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "vpcresourcesapidbschemastatusGETD86B4E85": Object {
      "Properties": Object {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": Object {
          "ConnectionId": Object {
            "Ref": "gatewayLink66988216",
          },
          "ConnectionType": "VPC_LINK",
          "IntegrationHttpMethod": "GET",
          "IntegrationResponses": Array [
            Object {
              "StatusCode": "200",
            },
          ],
          "PassthroughBehavior": "WHEN_NO_MATCH",
          "Type": "HTTP_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "http://",
                Object {
                  "Fn::GetAtt": Array [
                    "vpcresourcesnlbExternalNlb312FC480",
                    "DNSName",
                  ],
                },
                ":8082/db_schema_status",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "vpcresourcesapidbschemastatus2EE2D6E2",
        },
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "vpcresourcesapiproxy9B340F6B": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesapi3B63971B",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "vpcresourcesapiproxyANYC42B832A": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": Object {
          "CacheKeyParameters": Array [
            "method.request.path.proxy",
          ],
          "ConnectionId": Object {
            "Ref": "gatewayLink66988216",
          },
          "ConnectionType": "VPC_LINK",
          "IntegrationHttpMethod": "ANY",
          "IntegrationResponses": Array [
            Object {
              "StatusCode": "200",
            },
          ],
          "PassthroughBehavior": "WHEN_NO_MATCH",
          "RequestParameters": Object {
            "integration.request.path.proxy": "method.request.path.proxy",
          },
          "Type": "HTTP_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "http://",
                Object {
                  "Fn::GetAtt": Array [
                    "vpcresourcesnlbExternalNlb312FC480",
                    "DNSName",
                  ],
                },
                "/{proxy}",
              ],
            ],
          },
        },
        "MethodResponses": Array [
          Object {
            "StatusCode": "200",
          },
        ],
        "RequestParameters": Object {
          "method.request.path.proxy": true,
        },
        "ResourceId": Object {
          "Ref": "vpcresourcesapiproxy9B340F6B",
        },
        "RestApiId": Object {
          "Ref": "vpcresourcesapi3B63971B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "vpcresourcesbucket0B114C97": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "PublicAccessBlockConfiguration": Object {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesbucketPolicy8DDF9B46": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "vpcresourcesbucket0B114C97",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:authType": "REST-HEADER",
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    Object {
                      "Ref": "vpcresourcesbucket0B114C97",
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "vpcresourcesdatabaseDBInstance2B7BA8E2": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AllocatedStorage": "100",
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t2.small",
        "DBParameterGroupName": "default.postgres12",
        "DBSubnetGroupName": Object {
          "Ref": "vpcresourcesdatabaseDBInstanceSubnetGroup6AFC541D",
        },
        "DeletionProtection": false,
        "Engine": "postgres",
        "EngineVersion": "12.4",
        "MasterUserPassword": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "vpcresourcesdatabasemetaflowrdssecret38B9B679",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "vpcresourcesdatabasemetaflowrdssecret38B9B679",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "PubliclyAccessible": false,
        "StorageType": "gp2",
        "VPCSecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "vpcresourcesrdssg8F201A43",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesdatabaseDBInstanceSubnetGroup6AFC541D": Object {
      "Properties": Object {
        "DBSubnetGroupDescription": "Subnet group for DBInstance database",
        "SubnetIds": Array [
          Object {
            "Ref": "vpcresourcesvpcPublicSubnet1Subnet1777CDC4",
          },
          Object {
            "Ref": "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "vpcresourcesdatabasemetaflowrdssecret38B9B679": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "This is a Secrets Manager secret for an RDS DB instance",
        "GenerateSecretString": Object {
          "ExcludePunctuation": true,
          "GenerateStringKey": "password",
          "IncludeSpace": false,
          "SecretStringTemplate": "{\\"username\\":\\"master\\"}",
        },
        "Name": "metaflow-rds-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesdatabasemetaflowrdssecretAttachment7CCB2D76": Object {
      "Properties": Object {
        "SecretId": Object {
          "Ref": "vpcresourcesdatabasemetaflowrdssecret38B9B679",
        },
        "TargetId": Object {
          "Ref": "vpcresourcesdatabaseDBInstance2B7BA8E2",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "vpcresourcesecsexecutionroleDC762D89": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "TestEcsExecutionRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "vpcresourcesecsexecutionroleDefaultPolicy65761754": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ecr:GetAuthorizationToken",
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ecr:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repository/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "vpcresourcesecsloggroup78A2CD2D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "vpcresourcesecsexecutionroleDefaultPolicy65761754",
        "Roles": Array [
          Object {
            "Ref": "vpcresourcesecsexecutionroleDC762D89",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "vpcresourcesecsloggroup78A2CD2D": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/ecs/",
              Object {
                "Ref": "AWS::StackName",
              },
              "-metadata-service-v2",
            ],
          ],
        },
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesecstaskrole7D6BB8A3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AWSXRayDaemonWriteAccess",
              ],
            ],
          },
        ],
        "RoleName": "Test-EcsTaskRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "vpcresourcesecstaskroleDefaultPolicyC62BC9F4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "vpcresourcesbucket0B114C97",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "vpcresourcesbucket0B114C97",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "vpcresourcesecstaskroleDefaultPolicyC62BC9F4",
        "Roles": Array [
          Object {
            "Ref": "vpcresourcesecstaskrole7D6BB8A3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "vpcresourcesfargateserviceService8E70CA47": Object {
      "DependsOn": Array [
        "vpcresourcesnlbdbmigratelistenerE39F770F",
        "vpcresourcesnlbnlblistener024DA66E",
      ],
      "Properties": Object {
        "CapacityProviderStrategy": Array [
          Object {
            "CapacityProvider": "FARGATE_SPOT",
            "Weight": 1,
          },
          Object {
            "CapacityProvider": "FARGATE",
            "Weight": 0,
          },
        ],
        "Cluster": Object {
          "Ref": "vpcresourcesmetaflowcluster4FC7C6DC",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 75,
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LoadBalancers": Array [
          Object {
            "ContainerName": "metadata-service-v2",
            "ContainerPort": 8080,
            "TargetGroupArn": Object {
              "Ref": "vpcresourcesnlbdbmigratetargetgroup9CAB2245",
            },
          },
          Object {
            "ContainerName": "metadata-service-v2",
            "ContainerPort": 8080,
            "TargetGroupArn": Object {
              "Ref": "vpcresourcesnlbnlbtargetgroup9D349692",
            },
          },
        ],
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": Array [
              Object {
                "Fn::GetAtt": Array [
                  "vpcresourcesfargatesg0D003221",
                  "GroupId",
                ],
              },
            ],
            "Subnets": Array [
              Object {
                "Ref": "vpcresourcesvpcPublicSubnet1Subnet1777CDC4",
              },
              Object {
                "Ref": "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D",
              },
            ],
          },
        },
        "TaskDefinition": Object {
          "Ref": "vpcresourcesfargateservicemetaflowfargatetaskdefinition3695585A",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "vpcresourcesfargateservicemetaflowfargatetaskdefinition3695585A": Object {
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Cpu": 512,
            "Environment": Array [
              Object {
                "Name": "MF_METADATA_DB_HOST",
                "Value": Object {
                  "Fn::GetAtt": Array [
                    "vpcresourcesdatabaseDBInstance2B7BA8E2",
                    "Endpoint.Address",
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_PORT",
                "Value": Object {
                  "Fn::GetAtt": Array [
                    "vpcresourcesdatabaseDBInstance2B7BA8E2",
                    "Endpoint.Port",
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_USER",
                "Value": "master",
              },
              Object {
                "Name": "MF_METADATA_DB_PSWD",
                "Value": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "{{resolve:secretsmanager:",
                      Object {
                        "Ref": "vpcresourcesdatabasemetaflowrdssecret38B9B679",
                      },
                      ":SecretString:password::}}",
                    ],
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_NAME",
                "Value": "metaflow",
              },
            ],
            "Essential": true,
            "Image": "netflixoss/metaflow_metadata_service",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "vpcresourcesecsloggroup78A2CD2D",
                },
                "awslogs-region": "us-west-2",
                "awslogs-stream-prefix": "ecs",
              },
            },
            "Name": "metadata-service-v2",
            "PortMappings": Array [
              Object {
                "ContainerPort": 8080,
                "HostPort": 8080,
                "Protocol": "tcp",
              },
              Object {
                "ContainerPort": 8082,
                "HostPort": 8082,
                "Protocol": "tcp",
              },
            ],
          },
          Object {
            "EntryPoint": Array [
              "/usr/bin/xray",
              "-b",
              "127.0.0.1:2000",
              "-l",
              "dev",
              "-o",
            ],
            "Environment": Array [
              Object {
                "Name": "AWS_REGION",
                "Value": "us-west-2",
              },
            ],
            "Essential": true,
            "Image": "amazon/aws-xray-daemon",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "vpcresourcesecsloggroup78A2CD2D",
                },
                "awslogs-region": "us-west-2",
                "awslogs-stream-prefix": "xray",
              },
            },
            "MemoryReservation": 256,
            "Name": "xray",
            "PortMappings": Array [
              Object {
                "ContainerPort": 2000,
                "Protocol": "udp",
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesecsexecutionroleDC762D89",
            "Arn",
          ],
        },
        "Family": "metadata-service-v2",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "TaskRoleArn": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesecstaskrole7D6BB8A3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "vpcresourcesfargatesg0D003221": Object {
      "Properties": Object {
        "GroupDescription": "Test/vpc-resources/fargate-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "vpcresourcesvpc14EAEEFF",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8080,
            "IpProtocol": "tcp",
            "ToPort": 8080,
          },
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "vpcresourcesvpc14EAEEFF",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8082,
            "IpProtocol": "tcp",
            "ToPort": 8082,
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "vpcresourcesfargatesgfromTestvpcresourcesfargatesgA384A938ALLTRAFFIC00E42B61": Object {
      "Properties": Object {
        "Description": "Internal Communication",
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesfargatesg0D003221",
            "GroupId",
          ],
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesfargatesg0D003221",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "vpcresourceslambdaecsexecutionroleB58119A5": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AWSXRayDaemonWriteAccess",
              ],
            ],
          },
        ],
        "RoleName": "TestLambdaEcsExecuteRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "vpcresourceslambdaecsexecutionroleDefaultPolicy6BD66225": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ec2:CreateNetworkInterface",
                "ec2:DescribeNetworkInterfaces",
                "ec2:DeleteNetworkInterface",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group:*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "vpcresourceslambdaecsexecutionroleDefaultPolicy6BD66225",
        "Roles": Array [
          Object {
            "Ref": "vpcresourceslambdaecsexecutionroleB58119A5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "vpcresourcesmetaflowcluster4FC7C6DC": Object {
      "Properties": Object {
        "ClusterSettings": Array [
          Object {
            "Name": "containerInsights",
            "Value": "enabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "vpcresourcesmetaflowclusterD806DF3F": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "Cluster": Object {
          "Ref": "vpcresourcesmetaflowcluster4FC7C6DC",
        },
        "DefaultCapacityProviderStrategy": Array [],
      },
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
    },
    "vpcresourcesnlbExternalNlb312FC480": Object {
      "Properties": Object {
        "LoadBalancerAttributes": Array [
          Object {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Scheme": "internal",
        "Subnets": Array [
          Object {
            "Ref": "vpcresourcesvpcPublicSubnet1Subnet1777CDC4",
          },
          Object {
            "Ref": "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D",
          },
        ],
        "Type": "network",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "vpcresourcesnlbdbmigratelistenerE39F770F": Object {
      "Properties": Object {
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "vpcresourcesnlbdbmigratetargetgroup9CAB2245",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "vpcresourcesnlbExternalNlb312FC480",
        },
        "Port": 8082,
        "Protocol": "TCP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "vpcresourcesnlbdbmigratetargetgroup9CAB2245": Object {
      "Properties": Object {
        "HealthCheckPort": "8080",
        "HealthCheckProtocol": "TCP",
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 2,
        "Port": 8082,
        "Protocol": "TCP",
        "TargetType": "ip",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "vpcresourcesnlbnlblistener024DA66E": Object {
      "Properties": Object {
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "vpcresourcesnlbnlbtargetgroup9D349692",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "vpcresourcesnlbExternalNlb312FC480",
        },
        "Port": 80,
        "Protocol": "TCP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "vpcresourcesnlbnlbtargetgroup9D349692": Object {
      "Properties": Object {
        "HealthCheckProtocol": "TCP",
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 2,
        "Port": 8080,
        "Protocol": "TCP",
        "TargetType": "ip",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "vpcresourcesrdssg8F201A43": Object {
      "Properties": Object {
        "GroupDescription": "Test/vpc-resources/rds-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "vpcresourcesrdssgfromTestvpcresourcesfargatesgA384A9385432E33ED2E8": Object {
      "Properties": Object {
        "Description": "from TestvpcresourcesfargatesgA384A938:5432",
        "FromPort": 5432,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesrdssg8F201A43",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesfargatesg0D003221",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "vpcresourcestable216DD2E5": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "pathspec",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": Array [
          Object {
            "AttributeName": "pathspec",
            "KeyType": "HASH",
          },
        ],
        "PointInTimeRecoverySpecification": Object {
          "PointInTimeRecoveryEnabled": true,
        },
        "TimeToLiveSpecification": Object {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "vpcresourcesusageplan4C0B718F": Object {
      "Properties": Object {
        "ApiStages": Array [
          Object {
            "ApiId": Object {
              "Ref": "vpcresourcesapi3B63971B",
            },
            "Stage": Object {
              "Ref": "vpcresourcesapiDeploymentStageapi5040988E",
            },
            "Throttle": Object {},
          },
        ],
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "vpcresourcesusageplanUsagePlanKeyResource9204CD0F": Object {
      "Properties": Object {
        "KeyId": Object {
          "Ref": "vpcresourcesapiapikey5BFB2DBE",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": Object {
          "Ref": "vpcresourcesusageplan4C0B718F",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "vpcresourcesvpc14EAEEFF": Object {
      "Properties": Object {
        "CidrBlock": "10.20.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "vpcresourcesvpcIGW4B72B206": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "vpcresourcesvpcPublicSubnet1DefaultRoute7472D51E": Object {
      "DependsOn": Array [
        "vpcresourcesvpcVPCGW327AF424",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "vpcresourcesvpcIGW4B72B206",
        },
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet1RouteTableE91350F3",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "vpcresourcesvpcPublicSubnet1RouteTableAssociationE4EFA19F": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet1RouteTableE91350F3",
        },
        "SubnetId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet1Subnet1777CDC4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "vpcresourcesvpcPublicSubnet1RouteTableE91350F3": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "vpcresourcesvpcPublicSubnet1Subnet1777CDC4": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.20.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "vpcresourcesvpcPublicSubnet2DefaultRoute2F532CC2": Object {
      "DependsOn": Array [
        "vpcresourcesvpcVPCGW327AF424",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "vpcresourcesvpcIGW4B72B206",
        },
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet2RouteTable420A353C",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "vpcresourcesvpcPublicSubnet2RouteTable420A353C": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "vpcresourcesvpcPublicSubnet2RouteTableAssociation445A0707": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet2RouteTable420A353C",
        },
        "SubnetId": Object {
          "Ref": "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "vpcresourcesvpcPublicSubnet2Subnet15B1DE5D": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.20.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "vpcresourcesvpcVPCGW327AF424": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "vpcresourcesvpcIGW4B72B206",
        },
        "VpcId": Object {
          "Ref": "vpcresourcesvpc14EAEEFF",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
}
`;

exports[`vpc matches snapshot 1`] = `
Object {
  "Outputs": Object {
    "baseapiEndpoint040B6804": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "baseapi7C07353A",
            },
            ".execute-api.us-west-2.",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "baseapiDeploymentStageapi8C07A726",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363ArtifactHashC8CABE1D": Object {
      "Description": "Artifact hash for asset \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3Bucket6995F9C9": Object {
      "Description": "S3 bucket for asset \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
    "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823": Object {
      "Description": "S3 key for asset version \\"4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "baseapi7C07353A": Object {
      "Properties": Object {
        "EndpointConfiguration": Object {
          "Types": Array [
            "EDGE",
          ],
        },
        "Name": "api",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "baseapiAccount4E59F07F": Object {
      "DependsOn": Array [
        "baseapi7C07353A",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "baseapiCloudWatchRole13591CFA",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "baseapiCloudWatchRole13591CFA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "baseapiDeploymentE9A5AAF50b02ab1261bf8857371bcd906448b31d": Object {
      "DependsOn": Array [
        "baseapiproxyANY5DE55765",
        "baseapiproxy658DB29B",
        "baseapidbschemastatusGETDACB6754",
        "baseapidbschemastatus9309C984",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "baseapiDeploymentStageapi8C07A726": Object {
      "Properties": Object {
        "AccessLogSetting": Object {
          "DestinationArn": Object {
            "Fn::GetAtt": Array [
              "baseapiapilogsC00A746A",
              "Arn",
            ],
          },
          "Format": "$context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] \\"$context.httpMethod $context.resourcePath $context.protocol\\" $context.status $context.responseLength $context.requestId",
        },
        "DeploymentId": Object {
          "Ref": "baseapiDeploymentE9A5AAF50b02ab1261bf8857371bcd906448b31d",
        },
        "MethodSettings": Array [
          Object {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "INFO",
            "MetricsEnabled": true,
            "ResourcePath": "/*",
          },
        ],
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
        "StageName": "api",
        "TracingEnabled": true,
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "baseapiapikey9272BCBA": Object {
      "Properties": Object {
        "Enabled": true,
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "AWS::StackName",
              },
              "-apiKey",
            ],
          ],
        },
        "StageKeys": Array [
          Object {
            "RestApiId": Object {
              "Ref": "baseapi7C07353A",
            },
            "StageName": Object {
              "Ref": "baseapiDeploymentStageapi8C07A726",
            },
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "baseapiapilogsC00A746A": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "AWS::StackName",
              },
              "-api",
            ],
          ],
        },
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "baseapidbmigratehandler26E7811A": Object {
      "DependsOn": Array [
        "baselambdaecsexecutionroleDefaultPolicy9B6F5190",
        "baselambdaecsexecutionrole22629F41",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3Bucket6995F9C9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b4283ac3a59156d9fee54d373861ada81aeb137f07ff9ab9ba563fb0cfb9363S3VersionKeyEED18823",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Trigger DB Migration",
        "Environment": Object {
          "Variables": Object {
            "MD_LB_ADDRESS": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "http://",
                  Object {
                    "Fn::GetAtt": Array [
                      "basenlbExternalNlb6737F112",
                      "DNSName",
                    ],
                  },
                  ":8082",
                ],
              ],
            },
          },
        },
        "FunctionName": "migrate-db",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "baselambdaecsexecutionrole22629F41",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "basevpc395C82F1",
                "DefaultSecurityGroup",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "basevpcPublicSubnet1SubnetAEDFD2F3",
            },
            Object {
              "Ref": "basevpcPublicSubnet2SubnetA8B45E65",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "baseapidbschemastatus9309C984": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "baseapi7C07353A",
            "RootResourceId",
          ],
        },
        "PathPart": "db_schema_status",
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "baseapidbschemastatusGETDACB6754": Object {
      "Properties": Object {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": Object {
          "ConnectionId": Object {
            "Ref": "gatewayLink66988216",
          },
          "ConnectionType": "VPC_LINK",
          "IntegrationHttpMethod": "GET",
          "IntegrationResponses": Array [
            Object {
              "StatusCode": "200",
            },
          ],
          "PassthroughBehavior": "WHEN_NO_MATCH",
          "Type": "HTTP_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "http://",
                Object {
                  "Fn::GetAtt": Array [
                    "basenlbExternalNlb6737F112",
                    "DNSName",
                  ],
                },
                ":8082/db_schema_status",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "baseapidbschemastatus9309C984",
        },
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "baseapiproxy658DB29B": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "baseapi7C07353A",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "baseapiproxyANY5DE55765": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": Object {
          "CacheKeyParameters": Array [
            "method.request.path.proxy",
          ],
          "ConnectionId": Object {
            "Ref": "gatewayLink66988216",
          },
          "ConnectionType": "VPC_LINK",
          "IntegrationHttpMethod": "ANY",
          "IntegrationResponses": Array [
            Object {
              "StatusCode": "200",
            },
          ],
          "PassthroughBehavior": "WHEN_NO_MATCH",
          "RequestParameters": Object {
            "integration.request.path.proxy": "method.request.path.proxy",
          },
          "Type": "HTTP_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "http://",
                Object {
                  "Fn::GetAtt": Array [
                    "basenlbExternalNlb6737F112",
                    "DNSName",
                  ],
                },
                "/{proxy}",
              ],
            ],
          },
        },
        "MethodResponses": Array [
          Object {
            "StatusCode": "200",
          },
        ],
        "RequestParameters": Object {
          "method.request.path.proxy": true,
        },
        "ResourceId": Object {
          "Ref": "baseapiproxy658DB29B",
        },
        "RestApiId": Object {
          "Ref": "baseapi7C07353A",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "basebucket896CC8D5": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "PublicAccessBlockConfiguration": Object {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "basebucketPolicy5A7A5190": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "basebucket896CC8D5",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:authType": "REST-HEADER",
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    Object {
                      "Ref": "basebucket896CC8D5",
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "basedatabaseDBInstance3FB2F292": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AllocatedStorage": "100",
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t2.small",
        "DBParameterGroupName": "default.postgres12",
        "DBSubnetGroupName": Object {
          "Ref": "basedatabaseDBInstanceSubnetGroup06C71CBC",
        },
        "DeletionProtection": false,
        "Engine": "postgres",
        "EngineVersion": "12.4",
        "MasterUserPassword": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "basedatabasemetaflowrdssecret0FBDD809",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "basedatabasemetaflowrdssecret0FBDD809",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "PubliclyAccessible": false,
        "StorageType": "gp2",
        "VPCSecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "baserdssg8553A4F4",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "basedatabaseDBInstanceSubnetGroup06C71CBC": Object {
      "Properties": Object {
        "DBSubnetGroupDescription": "Subnet group for DBInstance database",
        "SubnetIds": Array [
          Object {
            "Ref": "basevpcPublicSubnet1SubnetAEDFD2F3",
          },
          Object {
            "Ref": "basevpcPublicSubnet2SubnetA8B45E65",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "basedatabasemetaflowrdssecret0FBDD809": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "This is a Secrets Manager secret for an RDS DB instance",
        "GenerateSecretString": Object {
          "ExcludePunctuation": true,
          "GenerateStringKey": "password",
          "IncludeSpace": false,
          "SecretStringTemplate": "{\\"username\\":\\"master\\"}",
        },
        "Name": "metaflow-rds-secret",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "basedatabasemetaflowrdssecretAttachment30B86948": Object {
      "Properties": Object {
        "SecretId": Object {
          "Ref": "basedatabasemetaflowrdssecret0FBDD809",
        },
        "TargetId": Object {
          "Ref": "basedatabaseDBInstance3FB2F292",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "baseecsexecutionrole1C93133C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "TestEcsExecutionRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "baseecsexecutionroleDefaultPolicy12C81BFE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ecr:GetAuthorizationToken",
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ecr:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repository/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "baseecsloggroupE4AF2B1C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "baseecsexecutionroleDefaultPolicy12C81BFE",
        "Roles": Array [
          Object {
            "Ref": "baseecsexecutionrole1C93133C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "baseecsloggroupE4AF2B1C": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/ecs/",
              Object {
                "Ref": "AWS::StackName",
              },
              "-metadata-service-v2",
            ],
          ],
        },
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "baseecstaskroleDefaultPolicyBA603954": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "basebucket896CC8D5",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "basebucket896CC8D5",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "baseecstaskroleDefaultPolicyBA603954",
        "Roles": Array [
          Object {
            "Ref": "baseecstaskroleEF40CB21",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "baseecstaskroleEF40CB21": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AWSXRayDaemonWriteAccess",
              ],
            ],
          },
        ],
        "RoleName": "Test-EcsTaskRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "basefargateserviceService7375FE51": Object {
      "DependsOn": Array [
        "basenlbdbmigratelistener6842633A",
        "basenlbnlblistener3E74A322",
      ],
      "Properties": Object {
        "CapacityProviderStrategy": Array [
          Object {
            "CapacityProvider": "FARGATE_SPOT",
            "Weight": 1,
          },
          Object {
            "CapacityProvider": "FARGATE",
            "Weight": 0,
          },
        ],
        "Cluster": Object {
          "Ref": "basemetaflowclusterD8ADD660",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 75,
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LoadBalancers": Array [
          Object {
            "ContainerName": "metadata-service-v2",
            "ContainerPort": 8080,
            "TargetGroupArn": Object {
              "Ref": "basenlbdbmigratetargetgroup6B0C567F",
            },
          },
          Object {
            "ContainerName": "metadata-service-v2",
            "ContainerPort": 8080,
            "TargetGroupArn": Object {
              "Ref": "basenlbnlbtargetgroup620EA5FB",
            },
          },
        ],
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": Array [
              Object {
                "Fn::GetAtt": Array [
                  "basefargatesgA0148482",
                  "GroupId",
                ],
              },
            ],
            "Subnets": Array [
              Object {
                "Ref": "basevpcPublicSubnet1SubnetAEDFD2F3",
              },
              Object {
                "Ref": "basevpcPublicSubnet2SubnetA8B45E65",
              },
            ],
          },
        },
        "TaskDefinition": Object {
          "Ref": "basefargateservicemetaflowfargatetaskdefinition15DFDABF",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "basefargateservicemetaflowfargatetaskdefinition15DFDABF": Object {
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Cpu": 512,
            "Environment": Array [
              Object {
                "Name": "MF_METADATA_DB_HOST",
                "Value": Object {
                  "Fn::GetAtt": Array [
                    "basedatabaseDBInstance3FB2F292",
                    "Endpoint.Address",
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_PORT",
                "Value": Object {
                  "Fn::GetAtt": Array [
                    "basedatabaseDBInstance3FB2F292",
                    "Endpoint.Port",
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_USER",
                "Value": "master",
              },
              Object {
                "Name": "MF_METADATA_DB_PSWD",
                "Value": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "{{resolve:secretsmanager:",
                      Object {
                        "Ref": "basedatabasemetaflowrdssecret0FBDD809",
                      },
                      ":SecretString:password::}}",
                    ],
                  ],
                },
              },
              Object {
                "Name": "MF_METADATA_DB_NAME",
                "Value": "metaflow",
              },
            ],
            "Essential": true,
            "Image": "netflixoss/metaflow_metadata_service",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "baseecsloggroupE4AF2B1C",
                },
                "awslogs-region": "us-west-2",
                "awslogs-stream-prefix": "ecs",
              },
            },
            "Name": "metadata-service-v2",
            "PortMappings": Array [
              Object {
                "ContainerPort": 8080,
                "HostPort": 8080,
                "Protocol": "tcp",
              },
              Object {
                "ContainerPort": 8082,
                "HostPort": 8082,
                "Protocol": "tcp",
              },
            ],
          },
          Object {
            "EntryPoint": Array [
              "/usr/bin/xray",
              "-b",
              "127.0.0.1:2000",
              "-l",
              "dev",
              "-o",
            ],
            "Environment": Array [
              Object {
                "Name": "AWS_REGION",
                "Value": "us-west-2",
              },
            ],
            "Essential": true,
            "Image": "amazon/aws-xray-daemon",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "baseecsloggroupE4AF2B1C",
                },
                "awslogs-region": "us-west-2",
                "awslogs-stream-prefix": "xray",
              },
            },
            "MemoryReservation": 256,
            "Name": "xray",
            "PortMappings": Array [
              Object {
                "ContainerPort": 2000,
                "Protocol": "udp",
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "baseecsexecutionrole1C93133C",
            "Arn",
          ],
        },
        "Family": "metadata-service-v2",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "TaskRoleArn": Object {
          "Fn::GetAtt": Array [
            "baseecstaskroleEF40CB21",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "basefargatesgA0148482": Object {
      "Properties": Object {
        "GroupDescription": "Test/base/fargate-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "basevpc395C82F1",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8080,
            "IpProtocol": "tcp",
            "ToPort": 8080,
          },
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "basevpc395C82F1",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8082,
            "IpProtocol": "tcp",
            "ToPort": 8082,
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "basefargatesgfromTestbasefargatesg2254BBE9ALLTRAFFIC83E36685": Object {
      "Properties": Object {
        "Description": "Internal Communication",
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "basefargatesgA0148482",
            "GroupId",
          ],
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "basefargatesgA0148482",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "baselambdaecsexecutionrole22629F41": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AWSXRayDaemonWriteAccess",
              ],
            ],
          },
        ],
        "RoleName": "TestLambdaEcsExecuteRole",
      },
      "Type": "AWS::IAM::Role",
    },
    "baselambdaecsexecutionroleDefaultPolicy9B6F5190": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ec2:CreateNetworkInterface",
                "ec2:DescribeNetworkInterfaces",
                "ec2:DeleteNetworkInterface",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group:*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "baselambdaecsexecutionroleDefaultPolicy9B6F5190",
        "Roles": Array [
          Object {
            "Ref": "baselambdaecsexecutionrole22629F41",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "basemetaflowcluster147DCA8F": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "Cluster": Object {
          "Ref": "basemetaflowclusterD8ADD660",
        },
        "DefaultCapacityProviderStrategy": Array [],
      },
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
    },
    "basemetaflowclusterD8ADD660": Object {
      "Properties": Object {
        "ClusterSettings": Array [
          Object {
            "Name": "containerInsights",
            "Value": "enabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "basenlbExternalNlb6737F112": Object {
      "Properties": Object {
        "LoadBalancerAttributes": Array [
          Object {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Scheme": "internal",
        "Subnets": Array [
          Object {
            "Ref": "basevpcPublicSubnet1SubnetAEDFD2F3",
          },
          Object {
            "Ref": "basevpcPublicSubnet2SubnetA8B45E65",
          },
        ],
        "Type": "network",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "basenlbdbmigratelistener6842633A": Object {
      "Properties": Object {
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "basenlbdbmigratetargetgroup6B0C567F",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "basenlbExternalNlb6737F112",
        },
        "Port": 8082,
        "Protocol": "TCP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "basenlbdbmigratetargetgroup6B0C567F": Object {
      "Properties": Object {
        "HealthCheckPort": "8080",
        "HealthCheckProtocol": "TCP",
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 2,
        "Port": 8082,
        "Protocol": "TCP",
        "TargetType": "ip",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "basenlbnlblistener3E74A322": Object {
      "Properties": Object {
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "basenlbnlbtargetgroup620EA5FB",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "basenlbExternalNlb6737F112",
        },
        "Port": 80,
        "Protocol": "TCP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "basenlbnlbtargetgroup620EA5FB": Object {
      "Properties": Object {
        "HealthCheckProtocol": "TCP",
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 2,
        "Port": 8080,
        "Protocol": "TCP",
        "TargetType": "ip",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "baserdssg8553A4F4": Object {
      "Properties": Object {
        "GroupDescription": "Test/base/rds-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "baserdssgfromTestbasefargatesg2254BBE954322DAADBF6": Object {
      "Properties": Object {
        "Description": "from Testbasefargatesg2254BBE9:5432",
        "FromPort": 5432,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "baserdssg8553A4F4",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "basefargatesgA0148482",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "basetable8FB0C562": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "pathspec",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": Array [
          Object {
            "AttributeName": "pathspec",
            "KeyType": "HASH",
          },
        ],
        "PointInTimeRecoverySpecification": Object {
          "PointInTimeRecoveryEnabled": true,
        },
        "TimeToLiveSpecification": Object {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "baseusageplan67525F8B": Object {
      "Properties": Object {
        "ApiStages": Array [
          Object {
            "ApiId": Object {
              "Ref": "baseapi7C07353A",
            },
            "Stage": Object {
              "Ref": "baseapiDeploymentStageapi8C07A726",
            },
            "Throttle": Object {},
          },
        ],
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "baseusageplanUsagePlanKeyResource911E724B": Object {
      "Properties": Object {
        "KeyId": Object {
          "Ref": "baseapiapikey9272BCBA",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": Object {
          "Ref": "baseusageplan67525F8B",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "basevpc395C82F1": Object {
      "Properties": Object {
        "CidrBlock": "10.20.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "basevpcIGW4B6BCB5E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "basevpcPublicSubnet1DefaultRouteA2DEFBFB": Object {
      "DependsOn": Array [
        "basevpcVPCGWB52E8319",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "basevpcIGW4B6BCB5E",
        },
        "RouteTableId": Object {
          "Ref": "basevpcPublicSubnet1RouteTable987EFA54",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "basevpcPublicSubnet1RouteTable987EFA54": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "basevpcPublicSubnet1RouteTableAssociation2E3C17BA": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "basevpcPublicSubnet1RouteTable987EFA54",
        },
        "SubnetId": Object {
          "Ref": "basevpcPublicSubnet1SubnetAEDFD2F3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "basevpcPublicSubnet1SubnetAEDFD2F3": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.20.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "basevpcPublicSubnet2DefaultRoute8BA2B278": Object {
      "DependsOn": Array [
        "basevpcVPCGWB52E8319",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "basevpcIGW4B6BCB5E",
        },
        "RouteTableId": Object {
          "Ref": "basevpcPublicSubnet2RouteTableE911ACFD",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "basevpcPublicSubnet2RouteTableAssociation9823C43D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "basevpcPublicSubnet2RouteTableE911ACFD",
        },
        "SubnetId": Object {
          "Ref": "basevpcPublicSubnet2SubnetA8B45E65",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "basevpcPublicSubnet2RouteTableE911ACFD": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "basevpcPublicSubnet2SubnetA8B45E65": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.20.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "basevpcVPCGWB52E8319": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "basevpcIGW4B6BCB5E",
        },
        "VpcId": Object {
          "Ref": "basevpc395C82F1",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "gatewayLink66988216": Object {
      "Properties": Object {
        "Name": "apiGatewayECSLink",
        "TargetArns": Array [
          Object {
            "Ref": "basenlbExternalNlb6737F112",
          },
        ],
      },
      "Type": "AWS::ApiGateway::VpcLink",
    },
  },
}
`;
